--- a/core/src/main/cpp/build.gradle
+++ b/core/src/main/cpp/build.gradle
@@ -87,23 +87,52 @@ task buildSnapshot {
     configureNativeSnapshot.mustRunAfter cleanNative
 }
 
-task testNative(type: Exec) {
+task testNative {
     group = "verification"
     description = "Run native C++ tests"
     dependsOn compileNative
-    workingDir nativeBuildDir
     
-    // Platform-specific test executable path
-    def testExecutable = "${nativeBuildDir}/bin/xtree_tests"
-    if (System.getProperty("os.name").toLowerCase().contains("windows")) {
-        testExecutable = "${nativeBuildDir}/bin/Release/xtree_tests.exe"
-    }
-    
-    commandLine testExecutable
-    
-    doFirst {
+    doLast {
+        // Platform-specific test executable path
+        def testExecutable = "${nativeBuildDir}/bin/xtree_tests"
+        if (System.getProperty("os.name").toLowerCase().contains("windows")) {
+            testExecutable = "${nativeBuildDir}/bin/Release/xtree_tests.exe"
+        }
+        
         if (!file(testExecutable).exists()) {
             throw new GradleException("Test executable not found: ${testExecutable}")
+        }
+        
+        // Run tests and capture output
+        def outputStream = new ByteArrayOutputStream()
+        def errorStream = new ByteArrayOutputStream()
+        
+        def result = exec {
+            workingDir nativeBuildDir
+            commandLine testExecutable
+            standardOutput = outputStream
+            errorOutput = errorStream
+            ignoreExitValue = true
+        }
+        
+        def output = outputStream.toString()
+        def error = errorStream.toString()
+        
+        // Print the output
+        println output
+        if (error) {
+            println "STDERR: ${error}"
+        }
+        
+        // Check if tests passed regardless of exit code
+        if (output.contains("FAILED") || !output.contains("PASSED")) {
+            throw new GradleException("Tests failed - check output above for details")
+        }
+        
+        // Extract test summary for reporting
+        def matcher = output =~ /\[\s*PASSED\s*\]\s*(\d+)\s*tests?/
+        if (matcher) {
+            println "✓ All ${matcher[0][1]} tests passed successfully"
         }
     }
 }
