Fix cross-platform build issues and memory management bugs
  This commit addresses multiple critical issues affecting cross-platform builds:

  Memory Management Fixes:
  - Fix double free error in IndexDetails::updateDetails() by removing incorrect
    deletion of _dimensionLabels pointer (not owned by IndexDetails)
  - Remove problematic static member definitions from xtree.hpp to prevent ODR violations
  - Centralize DataRecord static member definitions in test_globals.cpp

  Build System Improvements:
  - Add ARM architecture support (aarch64/arm64, armv7) across all platforms
  - Fix Windows MinGW build failures by improving vcpkg/Boost integration
  - Reorganize CMakeLists.txt to find Boost before processing sources
  - Add CMAKE_GENERATOR environment variable support in Gradle build scripts
  - Set correct vcpkg triplet (x64-mingw-static) for Windows MinGW builds

  CI/CD Enhancements:
  - Add ARM runners to all GitHub Actions workflows (ubuntu-24.04-arm, macos-14)
  - Update build matrix to include architecture dimension
  - Fix Windows Boost header discovery for third-party JSON Spirit library

  Documentation:
  - Update Windows build instructions to include vcpkg setup
  - Add vcpkg installation steps for Boost dependencies

  These changes ensure successful builds across Linux (x64/ARM), macOS (x64/ARM),
  and Windows (x64) platforms while resolving template instantiation issues and
  memory corruption errors in the test suite.

Signed-off-by: Nicholas Walter Knize <nknize@apache.org>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,3 +67,26 @@ jobs:
             cat test_output.log
             exit 1
           fi
+  
+  arm-smoke-test:
+    name: ARM Quick Check (Ubuntu ARM64)
+    runs-on: ubuntu-24.04-arm
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+      
+      - name: Install minimal dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y build-essential cmake libboost-all-dev
+      
+      - name: Quick build and test
+        run: |
+          ./gradlew assemble --no-daemon
+          echo "ARM64 build successful!"
