--- a/.github/workflows/merge-validation.yml
+++ b/.github/workflows/merge-validation.yml
@@ -10,21 +10,56 @@ on:
 
 jobs:
   full-validation:
-    name: Full Validation Suite
+    name: Full Validation Suite (${{ matrix.os }} ${{ matrix.arch }} ${{ matrix.build-type }})
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
         build-type: [Release, Debug]
         include:
+          # x64 builds for all build types
           - os: ubuntu-latest
+            arch: x64
+            runs-on: ubuntu-latest
             cmake-generator: "Unix Makefiles"
+            build-type: Release
+          - os: ubuntu-latest
+            arch: x64
+            runs-on: ubuntu-latest
+            cmake-generator: "Unix Makefiles"
+            build-type: Debug
           - os: macos-latest
+            arch: x64
+            runs-on: macos-13
             cmake-generator: "Unix Makefiles"
+            build-type: Release
+          - os: macos-latest
+            arch: x64
+            runs-on: macos-13
+            cmake-generator: "Unix Makefiles"
+            build-type: Debug
           - os: windows-latest
+            arch: x64
+            runs-on: windows-latest
             cmake-generator: "MinGW Makefiles"
+            build-type: Release
+          - os: windows-latest
+            arch: x64
+            runs-on: windows-latest
+            cmake-generator: "MinGW Makefiles"
+            build-type: Debug
+          # ARM builds only for Release
+          - os: ubuntu-latest
+            arch: arm64
+            runs-on: ubuntu-24.04-arm
+            cmake-generator: "Unix Makefiles"
+            build-type: Release
+          - os: macos-latest
+            arch: arm64
+            runs-on: macos-14
+            cmake-generator: "Unix Makefiles"
+            build-type: Release
     
-    runs-on: ${{ matrix.os }}
+    runs-on: ${{ matrix.runs-on }}
     
     steps:
       - name: Checkout code
