--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -20,21 +20,34 @@ jobs:
         run: ./gradlew verifyWrapper
 
   build-and-test:
-    name: Build and Test
+    name: Build and Test (${{ matrix.os }} ${{ matrix.arch }})
     needs: validate-wrapper
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
         include:
           - os: ubuntu-latest
+            arch: x64
+            runs-on: ubuntu-latest
+            cmake-generator: "Unix Makefiles"
+          - os: ubuntu-latest
+            arch: arm64
+            runs-on: ubuntu-24.04-arm
             cmake-generator: "Unix Makefiles"
           - os: macos-latest
+            arch: x64
+            runs-on: macos-13
+            cmake-generator: "Unix Makefiles"
+          - os: macos-latest
+            arch: arm64
+            runs-on: macos-14
             cmake-generator: "Unix Makefiles"
           - os: windows-latest
+            arch: x64
+            runs-on: windows-latest
             cmake-generator: "MinGW Makefiles"
     
-    runs-on: ${{ matrix.os }}
+    runs-on: ${{ matrix.runs-on }}
     
     steps:
       - name: Checkout code
