--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -20,32 +20,32 @@ jobs:
         run: ./gradlew verifyWrapper
 
   build-and-test:
-    name: Build and Test (${{ matrix.os }} ${{ matrix.arch }})
+    name: Build and Test (${{ matrix.os }} ${{ matrix.arch || 'x64' }})
     needs: validate-wrapper
     strategy:
       fail-fast: false
       matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
         include:
+          # Default configurations for each OS
           - os: ubuntu-latest
-            arch: x64
             runs-on: ubuntu-latest
             cmake-generator: "Unix Makefiles"
+          - os: macos-latest
+            runs-on: macos-13
+            cmake-generator: "Unix Makefiles"
+          - os: windows-latest
+            runs-on: windows-latest
+            cmake-generator: "MinGW Makefiles"
+          # Additional ARM builds
           - os: ubuntu-latest
             arch: arm64
             runs-on: ubuntu-24.04-arm
             cmake-generator: "Unix Makefiles"
           - os: macos-latest
-            arch: x64
-            runs-on: macos-13
-            cmake-generator: "Unix Makefiles"
-          - os: macos-latest
             arch: arm64
             runs-on: macos-14
             cmake-generator: "Unix Makefiles"
-          - os: windows-latest
-            arch: x64
-            runs-on: windows-latest
-            cmake-generator: "MinGW Makefiles"
     
     runs-on: ${{ matrix.runs-on }}
     
