Fix CI/CD issues: Windows vcpkg integration, valgrind errors, and matrix configs
  This commit addresses multiple critical CI/CD and build system issues:

  Build System Fixes:
  - Fix Windows MinGW builds by improving vcpkg/Boost integration
    - Remove BOOST_ROOT environment variable that conflicted with vcpkg toolchain
    - Add VCPKG_TARGET_TRIPLET support throughout the build pipeline
    - Update CMakeLists.txt to defer to vcpkg toolchain when available
    - Pass vcpkg variables through Gradle to CMake

  Memory Management Fixes:
  - Fix valgrind "invalid write" errors in Ubuntu Debug builds
    - Rename conflicting XTreeBucketTest classes to avoid ODR violations
    - Ensure proper initialization of static std::vector members
    - Fix IndexDetails::updateDetails to not delete non-owned pointers

  CI/CD Workflow Fixes:
  - Restore proper GitHub Actions matrix configurations
    - Fix pr-validation.yml and merge-validation.yml matrix definitions
    - Restore base matrix: os: [ubuntu-latest, macos-latest, windows-latest]
    - Add ARM builds as additional matrix include entries
    - Ensure all platforms are properly tested

  These changes ensure successful builds and tests across all platforms:
  Linux (x64/ARM), macOS (x64/ARM), and Windows (x64) with proper memory
  safety validation in Debug builds.

Signed-off-by: Nicholas Walter Knize <nknize@apache.org>

--- a/.github/workflows/merge-validation.yml
+++ b/.github/workflows/merge-validation.yml
@@ -75,8 +75,8 @@ jobs:
           C:/vcpkg/bootstrap-vcpkg.bat
           C:/vcpkg/vcpkg.exe install boost-system boost-filesystem boost-thread boost-iostreams --triplet x64-mingw-static
           
-          echo "BOOST_ROOT=C:/vcpkg/installed/x64-mingw-static" >> $GITHUB_ENV
           echo "CMAKE_TOOLCHAIN_FILE=C:/vcpkg/scripts/buildsystems/vcpkg.cmake" >> $GITHUB_ENV
+          echo "VCPKG_TARGET_TRIPLET=x64-mingw-static" >> $GITHUB_ENV
       
       - name: Verify Gradle wrapper
         run: ./gradlew verifyWrapper --no-daemon
@@ -90,12 +90,14 @@ jobs:
           CMAKE_BUILD_TYPE: ${{ matrix.build-type }}
           CMAKE_GENERATOR: ${{ matrix.cmake-generator }}
           CMAKE_TOOLCHAIN_FILE: ${{ env.CMAKE_TOOLCHAIN_FILE }}
+          VCPKG_TARGET_TRIPLET: ${{ env.VCPKG_TARGET_TRIPLET }}
       
       - name: Run all tests with coverage
         run: ./gradlew test --no-daemon
         env:
           CMAKE_BUILD_TYPE: ${{ matrix.build-type }}
           CMAKE_TOOLCHAIN_FILE: ${{ env.CMAKE_TOOLCHAIN_FILE }}
+          VCPKG_TARGET_TRIPLET: ${{ env.VCPKG_TARGET_TRIPLET }}
       
       - name: Run memory tests (Linux only)
         if: matrix.os == 'ubuntu-latest' && matrix.build-type == 'Debug'
