--- a/.github/workflows/merge-validation.yml
+++ b/.github/workflows/merge-validation.yml
@@ -73,10 +73,12 @@ jobs:
           
           git clone https://github.com/Microsoft/vcpkg.git C:/vcpkg
           C:/vcpkg/bootstrap-vcpkg.bat
+          C:/vcpkg/vcpkg.exe integrate install
           C:/vcpkg/vcpkg.exe install boost-system boost-filesystem boost-thread boost-iostreams --triplet x64-mingw-static
           
           echo "CMAKE_TOOLCHAIN_FILE=C:/vcpkg/scripts/buildsystems/vcpkg.cmake" >> $GITHUB_ENV
           echo "VCPKG_TARGET_TRIPLET=x64-mingw-static" >> $GITHUB_ENV
+          echo "CMAKE_PREFIX_PATH=C:/vcpkg/installed/x64-mingw-static" >> $GITHUB_ENV
       
       - name: Verify Gradle wrapper
         run: ./gradlew verifyWrapper --no-daemon
